# azure-container-apps-job-with-event-hub-integration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
infra/: main.bicep
infra/app/: eventHubAuthorizationRule.bicep  eventHubConsumerGroup.bicep  eventHubNamespaceAccess.bicep  keyVaultAccess.bicep  processor.bicep  storageAccountAccess.bicep
infra/core/eventHub/: eventHub.bicep
infra/core/host/: containerAppEnvironment.bicep
infra/core/identity/: managedIdentity.bicep
infra/core/keyVault/: containerRegistryTokenSecret.bicep  keyVault.bicep
infra/core/monitor/: logAnalytics.bicep
infra/core/storage/: storageAccount.bicep
scripts/: main.sh  publish-images.sh
src/processor/: Dockerfile  __main__.py  app.py
